[package]
name = "datapoint_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
tokio-modbus = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.11.8"
log = "0.4.29"
